infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastazure
  labels:
    name: fastazure
    environment: dev
